syntax = "proto3";

option csharp_namespace = "ShopApp.Identity.Api";

package ident;

service Identity {
  rpc Login (LoginRequest) returns (LoginReply);
  rpc Register (RegisterRequest) returns (RegisterReply);
  rpc List (ListRequest) returns (ListReply);
}

message LoginReply {
  string displayName = 1;
  string token = 2;
  string username = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message RegisterRequest {
    string displayName = 1;
    string username =2;
    string email = 3;
    string password = 4;
}

message RegisterReply{
    string displayName = 1;
    string token = 2;
    string username = 3;
}

message IdentityItem {
    string displayName = 1;
    string username = 2;
}

message ListRequest {

}

message ListReply{
    repeated IdentityItem items = 1;
}